[gd_scene load_steps=21 format=2]

[ext_resource path="res://shaders/entityBackLayer.tres" type="Material" id=1]
[ext_resource path="res://textures/items/bow.png" type="Texture" id=2]
[ext_resource path="res://textures/items/bow_pulling_0.png" type="Texture" id=3]
[ext_resource path="res://scripts/Skeleton.gd" type="Script" id=4]
[ext_resource path="res://textures/items/bow_pulling_2.png" type="Texture" id=5]
[ext_resource path="res://textures/items/bow_pulling_1.png" type="Texture" id=6]
[ext_resource path="res://textures/entity/skeleton/skeleton.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 7 )
region = Rect2( 0, 8, 8, 8 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 7 )
region = Rect2( 16, 20, 4, 12 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 7 )
region = Rect2( 40, 18, 2, 12 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": false,
"name": "shoot",
"speed": 3.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 7 )
region = Rect2( 42, 18, 2, 12 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 7 )
region = Rect2( 0, 18, 2, 12 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 7 )
region = Rect2( 2, 18, 2, 12 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 4, 13 )

[sub_resource type="Animation" id=9]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("RightArm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RightArm:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LeftArm:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LeftArm:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("RightLeg:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 6 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("RightLeg:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("LeftLeg:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 6 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("LeftLeg:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=10]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("RightArm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RightArm:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -85.0, -75.0, -93.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("RightLeg:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 6 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("RightLeg:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("LeftArm:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("LeftArm:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -85.0, -93.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("LeftLeg:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 6 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("LeftLeg:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=11]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("RightArm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RightArm:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 27.6, -33.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("RightLeg:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 6 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("RightLeg:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -45.0, 45.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("LeftArm:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("LeftArm:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -28.3, 33.8 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("LeftLeg:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 6 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("LeftLeg:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 45.0, -45.0 ]
}

[sub_resource type="Animation" id=12]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("RightArm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RightArm:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -37.1, 24.7 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("RightLeg:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 6 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("RightLeg:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 45.0, -45.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("LeftArm:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("LeftArm:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 29.7, -34.6 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("LeftLeg:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 6 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("LeftLeg:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -45.0, 45.0 ]
}

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 6, 16 )

[node name="Skeleton" type="KinematicBody2D"]
collision_layer = 8
script = ExtResource( 4 )

[node name="Head" type="Sprite" parent="."]
position = Vector2( 0, -6 )
texture = SubResource( 1 )
offset = Vector2( 0, -4 )

[node name="Body" type="Sprite" parent="."]
texture = SubResource( 2 )

[node name="RightArm" type="Sprite" parent="."]
position = Vector2( 0, -4 )
z_index = 1
texture = SubResource( 3 )
offset = Vector2( 0, 4 )

[node name="Bow" type="AnimatedSprite" parent="RightArm"]
position = Vector2( -0.129716, 6.67114 )
rotation = 2.26369
scale = Vector2( 0.75, 0.75 )
z_index = -1
frames = SubResource( 4 )
animation = "shoot"
frame = 2
playing = true
flip_h = true

[node name="LeftArm" type="Sprite" parent="."]
position = Vector2( 0, -4 )
z_index = -1
texture = SubResource( 5 )
offset = Vector2( 0, 4 )

[node name="RightLeg" type="Sprite" parent="."]
position = Vector2( 0, 6 )
texture = SubResource( 6 )
offset = Vector2( 0, 6 )

[node name="LeftLeg" type="Sprite" parent="."]
material = ExtResource( 1 )
position = Vector2( 0, 6 )
z_index = -1
texture = SubResource( 7 )
offset = Vector2( 0, 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 5 )
shape = SubResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 9 )
anims/shooting = SubResource( 10 )
anims/walk = SubResource( 11 )
anims/walkLeft = SubResource( 12 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 0, 2 )
shape = SubResource( 13 )

[node name="See" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Bow" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="mouse_entered" from="hitbox" to="." method="_on_hitbox_mouse_entered"]
[connection signal="mouse_exited" from="hitbox" to="." method="_on_hitbox_mouse_exited"]
[connection signal="timeout" from="See" to="." method="_on_See_timeout"]
[connection signal="timeout" from="Bow" to="." method="_on_Bow_timeout"]
